fix dashboard header alignment

--- a/app/stylesheets/frame.less
+++ b/app/stylesheets/frame.less
@@ -324,6 +324,7 @@ div.dashboard_data {
         position:relative;
         
         > span {
+          left:0px;
           bottom:6px;
           position:absolute;
           text-align:center;
